software/pcx86/sys/dos/compaq/2.11/index.md
---
layout: page
title: COMPAQ MS-DOS 2.11
permalink: /software/pcx86/sys/dos/compaq/2.11/
redirect_from: /disks/pcx86/dos/compaq/2.11/
machines:
  - id: ibm5160-compaq211
    type: pcx86
    config: /configs/pcx86/xml/machine/5160/cga/256kb/machine.xml
    autoMount:
      A:
        name: COMPAQ MS-DOS 2.11
      B:
        name: None
    autoType: $date\r$time\r
---

Released in 1984 by COMPAQ Computer Corp, this early version of MS-DOS displays the following messages on boot:

    The COMPAQ Personal Computer MS-DOS                                             
    Version 2.11                                                                    
                                                                                    
    (C) Copyright COMPAQ Computer Corp. 1982, 83, 84                                
    (C) Copyright Microsoft 1981, 82, 83                                            

A directory listing of the diskette is provided [below](#directory-of-compaq-ms-dos-211).
We also have copies of the original [COMPAQ MS-DOS Version 2 Documentation](/pubs/pc/software/dos/COMPAQ200/).

{% include machine.html id="ibm5160-compaq211" %}

### Directory of COMPAQ MS-DOS 2.11

     Volume in drive A is COMPAQ DOS 
    
    Directory of A:\
    
    IBMBIO   COM      5120 05-30-84  12:00p
    IBMDOS   COM     17408 05-30-84  12:00p
    COMMAND  COM     18272 05-30-84  12:00p
    ANSI     SYS      1593 05-30-84  12:00p
    FORMAT   COM      6496 05-30-84  12:00p
    CHKDSK   COM      6468 05-30-84  12:00p
    SYS      COM      1600 05-30-84  12:00p
    DISKCOPY COM      2122 05-30-84  12:00p
    DISKCOMP COM      1850 05-30-84  12:00p
    COMP     COM      2259 05-30-84  12:00p
    EDLIN    COM      8096 05-30-84  12:00p
    MODE     COM      3342 05-30-84  12:00p
    FDISK    COM      5760 05-30-84  12:00p
    BACKUP   COM      5097 05-30-84  12:00p
    RESTORE  COM      5217 05-30-84  12:00p
    PRINT    COM      4506 05-30-84  12:00p
    RECOVER  COM      2439 05-30-84  12:00p
    ASSIGN   COM       946 05-30-84  12:00p
    TREE     COM      2122 05-30-84  12:00p
    GRAPHICS COM       702 05-30-84  12:00p
    SORT     EXE      1632 05-30-84  12:00p
    FIND     EXE      6331 05-30-84  12:00p
    MORE     COM      4380 05-30-84  12:00p
    BASIC    COM      1074 05-30-84  12:00p
    BASICA   COM      1072 05-30-84  12:00p
    BASICA   EXE     64240 05-30-84  12:00p
    EXE2BIN  EXE      1649 05-30-84  12:00p
    LINK     EXE     42368 05-30-84  12:00p
    DEBUG    COM     12171 05-30-84  12:00p
    DEMO     BAT        14 05-30-84  12:00p
    DEMO     BAS      5447 05-30-84  12:00p
    DEMO1    BAS     15114 05-30-84  12:00p
    DEMO2    BAS     15261 05-30-84  12:00p
    DEMO3    BAS     20987 05-30-84  12:00p
    DEMO4    BAS      4977 05-30-84  12:00p
    USA      DAT     16128 05-30-84  12:00p
    TEST     EXE     19502 05-30-84  12:00p
    INTEREST BAS       384 05-30-84  12:00p
    WORDS             1306 05-30-84  12:00p
           39 file(s)     335452 bytes
    
    Total files listed:
           39 file(s)     335452 bytes
                            7168 bytes free

[Return to [COMPAQ MS-DOS Disks](/disks/pcx86/dos/compaq/)]
